# dissect-extract

./: .gitignore  README.md  pyproject.toml
dissect_extract/: __init__.py  __main__.py  cli.py  engine.py  keywords.py  util.py
dissect_extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dissect_extract/data/: data_access.toml  data_exfiltration.toml  initial_access.toml  lateral_movement.toml  linux_implant_yara.yar  persistence_execution.toml
dissect_extract/target_plugins/os/unix/bsd/darwin/macos/: ORIGIN.txt  accounts.py  addressbook.py  applications.py  ard.py  autostart.py  biome.py  callhistory.py  chromium.py  cookies.py  crashreporter.py  dhcp.py  docrevisions.py  dsstore.py  etcfiles.py  execpolicy.py  facetime.py  firefox.py  firewall.py  fsevents.py  hosts.py  icloud.py  idevicebackup.py  imessage.py  installhistory.py  interactions.py  kext.py  keychain.py  knowledgec.py  launchpad.py  localtime.py  logs.py  msrdc.py  notes.py  notifications.py  officemru.py  osinfo.py  powerlogs.py  preferences.py  printjobs.py  (+22 more)
dissect_extract/target_plugins/os/windows/regf/: regripper.py
